try to fix background image not showing up

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
   background-image: url("images/background.jpg");
   background-size: cover;
   background-position: center;
-  opacity: 0.3; /* שקיפות */
+ /* opacity: 0.3; /* שקיפות */
   z-index: -1;  /* שולח אחורה */
 }
 
